--- a/Win_Firewall_Rule.yaml
+++ b/Win_Firewall_Rule.yaml
@@ -11,3 +11,13 @@
       action: block
       direction: In
       protocol : TCP
+  - name: verify web access
+    uri:
+      url: http://ec2-13-229-230-99.ap-southeast-1.compute.amazonaws.com
+      return_content: yes
+      status_code: 200
+    delegate_to: localhost
+    register: out
+  - name: Printing the output
+    debug:
+      var: out
