--- a/Win_Firewall_Rule.yaml
+++ b/Win_Firewall_Rule.yaml
@@ -2,10 +2,10 @@
 - name: Testing firewall
   hosts: all
   tasks:
-  - name: Deny port 80
+  - name: Allow port 80
     win_firewall_rule:
       name: Testing
-      state: present
+      state: absent
       enable: true
       localport: 80
       action: block
