--- a/Windows_Updates.yaml
+++ b/Windows_Updates.yaml
@@ -8,4 +8,7 @@
       - Updates
       - CriticalUpdates
       - SecurityUpdates
+      - UpdateRollups
+      - Guidance
+      - DeveloperKits
       state: installed
