--- a/Win_File_ACL.yml
+++ b/Win_File_ACL.yml
@@ -1,9 +1,17 @@
-- name: Add IIS_IUSRS allow rights
-  win_acl:
-    path: C:\Temp\test.conf
-    user: xoaasatar
-    rights: FullControl
-    type: allow
-    state: present
-    inherit: ContainerInherit, ObjectInherit
-    propagation: 'None'
+---
+- name: Change owner and access
+  hosts: all
+  tasks:
+  - name: Change owner of Path
+    win_owner:
+      path: C:\Temp\test.conf
+      user: xoaasatar
+  - name: Add xoaasatar allow rights
+    win_acl:
+      path: C:\Temp\test.conf
+      user: xoaasatar
+      rights: FullControl
+      type: allow
+      state: present
+      inherit: ContainerInherit, ObjectInherit
+      propagation: 'None'
