--- a/user_profile.yml
+++ b/user_profile.yml
@@ -4,5 +4,5 @@
   tasks:
   - name: Create a local profile for an account.
     win_user_profile:
-      uisername: newuser
+      username: newuser
       state: present
